--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>complete responsive adventure & tour website design</title>
+    <title>UDM Conference</title>
     <script src="https://kit.fontawesome.com/9c815c6fee.js" crossorigin="anonymous"></script>
 
     <!-- font awesome cdn link  -->
