--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <a href="#home">home</a>
         <a href="#gallery">gallery</a>
         <a href="#speakers">speakers</a>
+        <a href="#travel">Travel</a>
         <a href="#committee">committee</a>
         <a href="#CallForPapers">call for papers</a>
         <a href="#sponsors">sponsors</a>
