First speaker picture added

--- a/index.html
+++ b/index.html
@@ -544,16 +544,16 @@
 
 <!-- reviews section ends -->
 
-<!-- services section starts  -->
+<!-- speakers section starts  -->
 
-<section class="services">
+<section class="speakers">
 
-    <h1 class="heading"> what we offer </h1>
+    <h1 class="heading"> Speakers </h1>
 
     <div class="box-container">
 
         <div class="box">
-            <img src="images/serv-1.png" alt="">
+            <img src="images/speaker1.jpg" alt="">
             <h3>complete guide</h3>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus, nihil?</p>
             <a href="#" class="btn">read more</a>
@@ -573,32 +573,11 @@
             <a href="#" class="btn">read more</a>
         </div>
 
-        <div class="box">
-            <img src="images/serv-4.png" alt="">
-            <h3>train guides</h3>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus, nihil?</p>
-            <a href="#" class="btn">read more</a>
-        </div>
-
-        <div class="box">
-            <img src="images/serv-5.png" alt="">
-            <h3>adventure trail</h3>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus, nihil?</p>
-            <a href="#" class="btn">read more</a>
-        </div>
-
-        <div class="box">
-            <img src="images/serv-6.png" alt="">
-            <h3>various adventures</h3>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus, nihil?</p>
-            <a href="#" class="btn">read more</a>
-        </div>
-        
     </div>
 
 </section>
 
-<!-- services section ends -->
+<!-- speakers section ends -->
 
 <!-- blogs section starts  -->
 
