--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@
         </div>
 
         <div class="box">
-            <img src="images/serv-2.png" alt="">
+            <img src="images/speaker2.jpg" alt="">
             <h3>custom packages</h3>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus, nihil?</p>
             <a href="#" class="btn">read more</a>
