Third speaker picture added

--- a/index.html
+++ b/index.html
@@ -567,7 +567,7 @@
         </div>
 
         <div class="box">
-            <img src="images/serv-3.png" alt="">
+            <img src="images/speaker3.jpg" alt="">
             <h3>family trips</h3>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus, nihil?</p>
             <a href="#" class="btn">read more</a>
