--- a/index.html
+++ b/index.html
@@ -554,23 +554,23 @@
 
         <div class="box">
             <img src="images/speaker1.jpg" alt="">
-            <h3>complete guide</h3>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus, nihil?</p>
-            <a href="#" class="btn">read more</a>
+            <h3>Prof. David Crowther</h3>
+            <p>Conference Chair</p>
+            <a href="https://www.srrnet.org/general-5-3" class="btn">read more</a>
         </div>
 
         <div class="box">
             <img src="images/speaker2.jpg" alt="">
-            <h3>custom packages</h3>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus, nihil?</p>
-            <a href="#" class="btn">read more</a>
+            <h3>Prof. Martin Samy</h3>
+            <p>CEO, Samy Medical Group Pty Ltd, Australia</p>
+            <a href="https://www.researchgate.net/profile/Martin-Samy" class="btn">read more</a>
         </div>
 
         <div class="box">
             <img src="images/speaker3.jpg" alt="">
-            <h3>family trips</h3>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus, nihil?</p>
-            <a href="#" class="btn">read more</a>
+            <h3>Dr. Robin Nunkoo</h3>
+            <p>Associate Professor, Faculty of Law and Management, University of Mauritius</p>
+            <a href="https://aidasco.org/webinars/lecture-by-dr-robin-nunkoo/" class="btn">read more</a>
         </div>
 
     </div>
