Second sponsor added

--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
     <div class="swiper clients-slider">
         <div class="swiper-wrapper">
             <div class="swiper-slide silde"><img src="images/sponsor1.jpg" alt=""></div>
-            <div class="swiper-slide silde"><img src="images/client-logo-2.png" alt=""></div>
+            <div class="swiper-slide silde"><img src="images/sponsor2.jpg" alt=""></div>
             <div class="swiper-slide silde"><img src="images/client-logo-3.png" alt=""></div>
             <div class="swiper-slide silde"><img src="images/client-logo-4.png" alt=""></div>
         </div>
