--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
         <div class="swiper-wrapper">
             <div class="swiper-slide silde"><img src="images/sponsor1.jpg" alt=""></div>
             <div class="swiper-slide silde"><img src="images/sponsor2.jpg" alt=""></div>
-            <div class="swiper-slide silde"><img src="images/client-logo-3.png" alt=""></div>
+            <div class="swiper-slide silde"><img src="images/sponsor3.png" alt=""></div>
             <div class="swiper-slide silde"><img src="images/client-logo-4.png" alt=""></div>
         </div>
     </div>
