Fourth sponsor added

--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@
             <div class="swiper-slide silde"><img src="images/sponsor1.jpg" alt=""></div>
             <div class="swiper-slide silde"><img src="images/sponsor2.jpg" alt=""></div>
             <div class="swiper-slide silde"><img src="images/sponsor3.png" alt=""></div>
-            <div class="swiper-slide silde"><img src="images/client-logo-4.png" alt=""></div>
+            <div class="swiper-slide silde"><img src="images/sponsor4.png" alt=""></div>
         </div>
     </div>
 
