--- a/index.html
+++ b/index.html
@@ -556,7 +556,7 @@
 
     </div>
 
-    <div class="credit">created by <span>mr. web designer</span> | all rights reserved!</div>
+    <div class="credit">created by <span>Zuhair</span> | all rights reserved!</div>
 
 </section>
 
