--- a/index.html
+++ b/index.html
@@ -34,14 +34,13 @@
 
     <nav class="navbar">
         <div id="nav-close" class="fas fa-times"></div>
-        <a href="#home">home</a>
+        <a href="#main-container">home</a>
         <a href="#gallery">gallery</a>
         <a href="#speakers">speakers</a>
         <a href="#travel">Travel</a>
         <a href="#committee">committee</a>
         <a href="#CallForPapers">call for papers</a>
         <a href="#sponsors">sponsors</a>
-        <a href="#registration">registration</a>
         <a href="#contact">contact us</a>
     </nav>
 
@@ -67,7 +66,7 @@
     </form>
 </div>
 
-<section class="main-container" style="background: url(images/background1.jpg) no-repeat;">
+<section class="main-container" id="main-container" style="background: url(images/background1.jpg) no-repeat;">
     <div class="maincontainer-section">
             <div id="featured">
                 <h2>Welcome to UDM Conference</h2>
@@ -221,145 +220,49 @@
 
 <!-- about section ends -->
 
-<!-- shop section starts  -->
+<!-- Gallery section starts  -->
 
-<section class="shop" id="shop">
+<section class="gallery" id="gallery">
 
-    <h1 class="heading">featured products</h1>
+    <h1 class="heading">gallery</h1>
 
-    <div class="swiper product-slider">
+    <div class="swiper gallery-slider">
 
         <div class="swiper-wrapper">
 
             <div class="swiper-slide slide">
                 <div class="image">
                     <img src="images/product-1.jpg" alt="">
-                    <div class="icons">
-                        <a href="#" class="fas fa-shopping-cart"></a>
-                        <a href="#" class="fas fa-eye"></a>
-                        <a href="#" class="fas fa-share"></a>
-                    </div>
-                </div>
-                <div class="content">
-                    <h3>survival kits</h3>
-                    <div class="price"> $5.00 - $25.00 </div>
-                    <div class="stars">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star-half-alt"></i>
-                    </div>
                 </div>
             </div>
 
             <div class="swiper-slide slide">
                 <div class="image">
                     <img src="images/product-2.jpg" alt="">
-                    <div class="icons">
-                        <a href="#" class="fas fa-shopping-cart"></a>
-                        <a href="#" class="fas fa-eye"></a>
-                        <a href="#" class="fas fa-share"></a>
-                    </div>
-                </div>
-                <div class="content">
-                    <h3>survival kits</h3>
-                    <div class="price"> $5.00 - $25.00 </div>
-                    <div class="stars">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star-half-alt"></i>
-                    </div>
                 </div>
             </div>
 
             <div class="swiper-slide slide">
                 <div class="image">
                     <img src="images/product-3.jpg" alt="">
-                    <div class="icons">
-                        <a href="#" class="fas fa-shopping-cart"></a>
-                        <a href="#" class="fas fa-eye"></a>
-                        <a href="#" class="fas fa-share"></a>
-                    </div>
-                </div>
-                <div class="content">
-                    <h3>survival kits</h3>
-                    <div class="price"> $5.00 - $25.00 </div>
-                    <div class="stars">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star-half-alt"></i>
-                    </div>
                 </div>
             </div>
 
             <div class="swiper-slide slide">
                 <div class="image">
                     <img src="images/product-4.jpg" alt="">
-                    <div class="icons">
-                        <a href="#" class="fas fa-shopping-cart"></a>
-                        <a href="#" class="fas fa-eye"></a>
-                        <a href="#" class="fas fa-share"></a>
-                    </div>
-                </div>
-                <div class="content">
-                    <h3>survival kits</h3>
-                    <div class="price"> $5.00 - $25.00 </div>
-                    <div class="stars">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star-half-alt"></i>
-                    </div>
                 </div>
             </div>
 
             <div class="swiper-slide slide">
                 <div class="image">
                     <img src="images/product-5.jpg" alt="">
-                    <div class="icons">
-                        <a href="#" class="fas fa-shopping-cart"></a>
-                        <a href="#" class="fas fa-eye"></a>
-                        <a href="#" class="fas fa-share"></a>
-                    </div>
-                </div>
-                <div class="content">
-                    <h3>survival kits</h3>
-                    <div class="price"> $5.00 - $25.00 </div>
-                    <div class="stars">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star-half-alt"></i>
-                    </div>
                 </div>
             </div>
 
             <div class="swiper-slide slide">
                 <div class="image">
                     <img src="images/product-6.jpg" alt="">
-                    <div class="icons">
-                        <a href="#" class="fas fa-shopping-cart"></a>
-                        <a href="#" class="fas fa-eye"></a>
-                        <a href="#" class="fas fa-share"></a>
-                    </div>
-                </div>
-                <div class="content">
-                    <h3>survival kits</h3>
-                    <div class="price"> $5.00 - $25.00 </div>
-                    <div class="stars">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star-half-alt"></i>
-                    </div>
                 </div>
             </div>
 
@@ -372,7 +275,7 @@
 
 </section>
 
-<!-- shop section ends -->
+<!-- Gallery section ends -->
 
 <!-- packages section starts  -->
 
@@ -462,7 +365,7 @@
 
 <!-- speakers section starts  -->
 
-<section class="speakers">
+<section class="speakers" id="speakers">
 
     <h1 class="heading"> Speakers </h1>
 
@@ -497,9 +400,9 @@
 
 <!-- Sponsor section -->
 
-<section class="clients">
+<section class="sponsors" id="sponsors">
 
-    <div class="swiper clients-slider">
+    <div class="swiper sponsors-slider">
         <div class="swiper-wrapper">
             <div class="swiper-slide silde"><img src="images/sponsor1.jpg" alt=""></div>
             <div class="swiper-slide silde"><img src="images/sponsor2.jpg" alt=""></div>
@@ -519,39 +422,35 @@
 
         <div class="box">
             <h3>quick links</h3>
-            <a href="#home">home</a>
-            <a href="#about">about</a>
-            <a href="#shop">shop</a>
-            <a href="#packages">packages</a>
-            <a href="#reviews">reviews</a>
-            <a href="#blogs">blogs</a>
+            <a href="#main-container">home</a>
+            <a href="#speakers">speakers</a>
+            <a href="#shop">gallery</a>
+            <a href="#packages">travel</a>
+            <a href="#reviews">call for papers</a>
         </div>
 
         <div class="box">
             <h3>extra links</h3>
-            <a href="#">my account</a>
-            <a href="#">my order</a>
-            <a href="#">my wishlist</a>
-            <a href="#">ask questions</a>
-            <a href="#">terms of use</a>
-            <a href="#">privacy policy</a>
+            <a href="#">committee</a>
+            <a href="#sponsors">sponsors</a>
+            <a href="#">contact us</a>
+            <a href="#">sign up</a>
         </div>
 
         <div class="box">
             <h3>contact info</h3>
-            <a href="#"> <i class="fas fa-phone"></i> +123-456-7890 </a>
-            <a href="#"> <i class="fas fa-phone"></i> +111-222-3333 </a>
-            <a href="#"> <i class="fas fa-envelope"></i> shaikhanas@gmail.com </a>
-            <a href="#"> <i class="fas fa-map"></i> mumbai, india - 400104 </a>
+            <a href="#"> <i class="fas fa-phone"></i> 460 95 00 </a>
+            <a href="#"> <i class="fas fa-envelope"></i> communicationudm@udm.ac.mu </a>
+            <a href="#"> <i class="fas fa-map"></i> Avenue de la Concorde, Beau Bassin-Rose Hill </a>
         </div>
 
         <div class="box">
             <h3>follow us</h3>
-            <a href="#"> <i class="fab fa-facebook-f"></i> facebook </a>
-            <a href="#"> <i class="fab fa-twitter"></i> twitter </a>
-            <a href="#"> <i class="fab fa-instagram"></i> instagram </a>
-            <a href="#"> <i class="fab fa-linkedin"></i> linkedin </a>
-            <a href="#"> <i class="fab fa-github"></i> github </a>
+            <a href="https://www.facebook.com/UniversiteDesMascareignes/"> <i class="fab fa-facebook-f"></i> facebook </a>
+            <a href="https://twitter.com/udmmauritius?lang=en"> <i class="fab fa-twitter"></i> twitter </a>
+            <a href="https://www.instagram.com/universite.des.mascareignes/"> <i class="fab fa-instagram"></i> instagram </a>
+            <a href="https://www.linkedin.com/school/universite-des-mascareignes/"> <i class="fab fa-linkedin"></i> linkedin </a>
+            <a href="https://www.youtube.com/channel/UCzJ2anmDLMwPb36bzIiHukA"> <i class="fab fa-youtube"></i> youtube </a>
         </div>
 
     </div>
