--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <a href="#main-container">home</a>
         <a href="#gallery">gallery</a>
         <a href="#speakers">speakers</a>
-        <a href="#travel">Travel</a>
+        <a href="venue.html">venue</a>
         <a href="#committee">committee</a>
         <a href="#CallForPapers">call for papers</a>
         <a href="#sponsors">sponsors</a>
@@ -65,6 +65,8 @@
         <label for="search-box" class="fas fa-search"></label>
     </form>
 </div>
+
+<!-- Main section -->
 
 <section class="main-container" id="main-container" style="background: url(images/background1.jpg) no-repeat;">
     <div class="maincontainer-section">
@@ -107,118 +109,7 @@
         </div>				
     </aside>
 </section>
-<!-- home section starts  -->
-
-<section class="home" id="home">
-
-    <div class="swiper home-slider">
-
-        <div class="swiper-wrapper">
-
-            <div class="swiper-slide">
-                <div class="box" style="background: url(images/home-bg-1.jpg) no-repeat;">
-                    <div class="content">
-                        <span>never stop</span>
-                        <h3>exploring</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit unde ex molestias soluta consequatur saepe aliquam, excepturi delectus consequuntur minus!</p>
-                        <a href="#" class="btn">get started</a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="swiper-slide">
-                <div class="box second" style="background: url(images/home-bg-2.jpg) no-repeat;">
-                    <div class="content">
-                        <span>make tour</span>
-                        <h3>amazing</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit unde ex molestias soluta consequatur saepe aliquam, excepturi delectus consequuntur minus!</p>
-                        <a href="#" class="btn">get started</a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="swiper-slide">
-                <div class="box" style="background: url(images/home-bg-3.jpg) no-repeat;">
-                    <div class="content">
-                        <span>explore the</span>
-                        <h3>new world</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit unde ex molestias soluta consequatur saepe aliquam, excepturi delectus consequuntur minus!</p>
-                        <a href="#" class="btn">get started</a>
-                    </div>
-                </div>
-            </div>
-
-        </div>
-
-        <div class="swiper-button-next"></div>
-        <div class="swiper-button-prev"></div>
-
-    </div>
-
-</section>
-
-<!-- home section ends -->
-
-<!-- category section starts  -->
-
-<section class="category">
-
-    <h1 class="heading">adventure idea!</h1>
-
-    <div class="box-container">
-
-        <div class="box">
-            <img src="images/category-1.jpg" alt="">
-            <h3>bungee jump</h3>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laborum, id.</p>
-            <a href="#" class="btn">read more</a>
-        </div>
-
-        <div class="box">
-            <img src="images/category-2.jpg" alt="">
-            <h3>zip lines</h3>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laborum, id.</p>
-            <a href="#" class="btn">read more</a>
-        </div>
-
-        <div class="box">
-            <img src="images/category-3.jpg" alt="">
-            <h3>Canoeing</h3>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laborum, id.</p>
-            <a href="#" class="btn">read more</a>
-        </div>
-
-        <div class="box">
-            <img src="images/category-4.jpg" alt="">
-            <h3>kayaking</h3>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laborum, id.</p>
-            <a href="#" class="btn">read more</a>
-        </div>
-
-    </div>
-
-</section>
-
-<!-- category section ends -->
-
-<!-- about section starts  -->
-
-<section class="about" id="about">
-
-    <div class="image">
-        <img src="images/about-img.jpg" alt="">
-    </div>
-
-    <div class="content">
-        <h3>memorable outdoor experiences</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque voluptates corrupti natus necessitatibus beatae voluptatibus, deserunt quo soluta minima libero laborum, corporis error esse vitae placeat blanditiis reiciendis vel? Minima.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident dicta doloremque placeat porro, ipsam quia at beatae atque odit iste?</p>
-        <a href="#" class="btn">read more</a>
-    </div>
-
-</section>
-
-<!-- about section ends -->
+<!-- Main section ends -->
 
 <!-- Gallery section starts  -->
 
@@ -232,37 +123,37 @@
 
             <div class="swiper-slide slide">
                 <div class="image">
-                    <img src="images/product-1.jpg" alt="">
+                    <img src="images/gallery1.jpg" alt="">
                 </div>
             </div>
 
             <div class="swiper-slide slide">
                 <div class="image">
-                    <img src="images/product-2.jpg" alt="">
+                    <img src="images/gallery2.jpg" alt="">
                 </div>
             </div>
 
             <div class="swiper-slide slide">
                 <div class="image">
-                    <img src="images/product-3.jpg" alt="">
+                    <img src="images/gallery3.jpg" alt="">
                 </div>
             </div>
 
             <div class="swiper-slide slide">
                 <div class="image">
-                    <img src="images/product-4.jpg" alt="">
+                    <img src="images/gallery4.jpg" alt="">
                 </div>
             </div>
 
             <div class="swiper-slide slide">
                 <div class="image">
-                    <img src="images/product-5.jpg" alt="">
+                    <img src="images/gallery5.jpg" alt="">
                 </div>
             </div>
 
             <div class="swiper-slide slide">
                 <div class="image">
-                    <img src="images/product-6.jpg" alt="">
+                    <img src="images/gallery6.jpg" alt="">
                 </div>
             </div>
 
@@ -276,92 +167,6 @@
 </section>
 
 <!-- Gallery section ends -->
-
-<!-- packages section starts  -->
-
-<section class="packages" id="packages">
-
-    <h1 class="heading">popular packages</h1>
-
-    <div class="box-container">
-
-        <div class="box">
-            <div class="image">
-                <img src="images/img-1.jpg" alt="">
-            </div>
-            <div class="content">
-                <h3>featured tour package</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam, eos.</p>
-                <div class="price">$250 - $450</div>
-                <a href="#" class="btn">explore now</a>
-            </div>
-        </div>
-
-        <div class="box">
-            <div class="image">
-                <img src="images/img-2.jpg" alt="">
-            </div>
-            <div class="content">
-                <h3>featured tour package</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam, eos.</p>
-                <div class="price">$250 - $450</div>
-                <a href="#" class="btn">explore now</a>
-            </div>
-        </div>
-
-        <div class="box">
-            <div class="image">
-                <img src="images/img-3.jpg" alt="">
-            </div>
-            <div class="content">
-                <h3>featured tour package</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam, eos.</p>
-                <div class="price">$250 - $450</div>
-                <a href="#" class="btn">explore now</a>
-            </div>
-        </div>
-
-        <div class="box">
-            <div class="image">
-                <img src="images/img-4.jpg" alt="">
-            </div>
-            <div class="content">
-                <h3>featured tour package</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam, eos.</p>
-                <div class="price">$250 - $450</div>
-                <a href="#" class="btn">explore now</a>
-            </div>
-        </div>
-
-        <div class="box">
-            <div class="image">
-                <img src="images/img-5.jpg" alt="">
-            </div>
-            <div class="content">
-                <h3>featured tour package</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam, eos.</p>
-                <div class="price">$250 - $450</div>
-                <a href="#" class="btn">explore now</a>
-            </div>
-        </div>
-
-        <div class="box">
-            <div class="image">
-                <img src="images/img-6.jpg" alt="">
-            </div>
-            <div class="content">
-                <h3>featured tour package</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam, eos.</p>
-                <div class="price">$250 - $450</div>
-                <a href="#" class="btn">explore now</a>
-            </div>
-        </div>
-
-    </div>
-
-</section>
-
-<!-- packages section ends -->
 
 <!-- speakers section starts  -->
 
@@ -424,17 +229,17 @@
             <h3>quick links</h3>
             <a href="#main-container">home</a>
             <a href="#speakers">speakers</a>
-            <a href="#shop">gallery</a>
-            <a href="#packages">travel</a>
-            <a href="#reviews">call for papers</a>
+            <a href="#gallery">gallery</a>
+            <a href="venue.html">venue</a>
+            <a href="#CallForPapers">call for papers</a>
         </div>
 
         <div class="box">
             <h3>extra links</h3>
-            <a href="#">committee</a>
+            <a href="#committee">committee</a>
             <a href="#sponsors">sponsors</a>
-            <a href="#">contact us</a>
-            <a href="#">sign up</a>
+            <a href="#contact">contact us</a>
+            <a href="sign up.html">sign up</a>
         </div>
 
         <div class="box">
