--- a/venue.html
+++ b/venue.html
@@ -37,7 +37,7 @@
         <a href="index.html">home</a>
         <a href="#gallery">gallery</a>
         <a href="#speakers">speakers</a>
-        <a href="#venue">venue</a>
+        <a href="venue.html">venue</a>
         <a href="#committee">committee</a>
         <a href="#CallForPapers">call for papers</a>
         <a href="#sponsors">sponsors</a>
